fixing blurry background for ios

--- a/style/style.css
+++ b/style/style.css
@@ -192,8 +192,8 @@ h1{
     body{
         background-image: url(../images/natureBackground/natureBackground2.jpg) no-repeat center;
         padding-top: 25vw; 
-        background-attachment: fixed;
-        background-size: cover;
+        background-attachment: scroll;
+        background-size: auto;
     }
 
     h1{
